media/css/protocol/components/_footer.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

@use 'sass:math';

$image-path: '/media/protocol/img';

@use '../../m24/vars/color' as m24;
@import '~@mozilla-protocol/core/protocol/css/includes/lib';

@mixin footer-line {
    border-bottom: 1px solid m24.$token-color-mid-gray;
}

/* ----------------------------------------------------------------------------- */
// Primary

.mzp-c-footer {
    background-color: m24.$token-color-off-black;
}

.c-footer-subheading {
    @extend .mzp-c-footer-heading; /* stylelint-disable-line scss/at-extend-no-missing-placeholder */
    color: m24.$token-color-mid-gray;

    @media screen and (max-width: #{$screen-sm - 1}) {
        padding-top: 0;
        padding-bottom: 0;
    }

    @media #{$mq-lg} {
        margin-top: $layout-sm / 2 * -1;
    }
}

// external link icon
.mzp-c-footer-section a[href^="http"]::after {
    @include bidi((
        (margin-left, $spacing-sm, margin-right, 0),
        (transform, scaleX(1), scaleX(-1)),
    ));
    content: '';
    background: url('/media/img/icons/external-white.svg') no-repeat bottom center / contain;
    display: inline-block;
    height: 1em;
    vertical-align: baseline;
    width: 12px
}

.is-closed[aria-hidden="true"] {
    display: none;
}

.mzp-c-footer-primary {
    @include footer-line;
}

@media screen and (max-width: #{$screen-lg - 1px}) {
    .mzp-c-footer-sections {
        // massive Protocol override
        border-bottom: transparent;
        column-gap: $spacing-lg;
        display: grid;
        grid-template-areas:
                    "download download"
                    "community resources"
                    "follow resources";
        grid-template-columns: repeat(2, minmax(0, 1fr));
        padding-bottom: $layout-sm;

        &::after {
            display: none;
        }

        .mzp-c-footer-section {
            width: auto;
            padding: 0;

            &::after {
                display: none;
            }

            html[dir='rtl'] &:nth-child(even) {
                padding: 0;
            }
        }

        .mzp-c-footer-list:last-child {
            margin-bottom: 0;
        }

        .c-footer-section-download {
            border-bottom: 1px solid m24.$token-color-mid-gray;
            column-gap: $spacing-lg;
            display: grid;
            grid-column-end: -1;
            grid-column-start: 1;
            grid-template-areas:
                "download download"
                "platforms latest"
                "platforms business";
            grid-template-columns: repeat(2, minmax(0, 1fr));
            margin-bottom: $layout-sm;

            .c-footer-heading-download {
                grid-area: download;
                grid-column-end: -1;
                grid-column-start: 1;
            }

            .c-footer-list-download {
                grid-area: platforms;

                li:last-child {
                    margin-bottom: 0;
                }
            }

            .c-footer-section-latest {
                grid-area: latest;
            }

            .c-footer-section-business {
                grid-area: business;
            }
        }

        .c-footer-section-community {
            grid-area: community;
        }

        .c-footer-section-resources {
            grid-area: resources;
        }

        .c-footer-section-follow {
            grid-area: follow;
            padding-top: $layout-sm;

            li:last-child {
                margin-bottom: 0;
            }
        }
    }
}

@media screen and (min-width: #{$screen-lg}) {
    .mzp-c-footer-primary {
        position: relative;
    }

    .mzp-c-footer-sections {
        border-color: transparent;
        padding-bottom: 0;
    }
}

/* ----------------------------------------------------------------------------- */
// Secondary

.mzp-c-footer-terms {
    max-width: 100%;

    a {
        font-size: var(--body-md-size);

        &:link,
        &:visited {
            color: m24.$token-color-mid-gray;
            text-decoration: none;

            &:hover,
            &:focus {
                text-decoration: underline;
            }
        }
    }
}

/* ----------------------------------------------------------------------------- */
// More

.c-footer-more {
    @media screen and (max-width: #{$screen-md - 1px}) {
        border-top: 1px solid m24.$token-color-mid-gray;
        margin-top: $layout-sm;
        padding-top: $layout-sm;
    }

    @media screen and (min-width: #{$screen-md}) {
        margin-top: $layout-lg;

        @supports(display:flex) {
            display: flex;
            justify-content: space-between;
        }
    }
}

.c-footer-logo {
    @extend .mzp-c-footer-primary-logo; /* stylelint-disable-line scss/at-extend-no-missing-placeholder */
    text-align: center;

    @media screen and (min-width: #{$screen-lg}) {
        bottom: 0;
        position: absolute;
        text-align: end;
        @include bidi(((right, 0, left, auto),));

        $gutter: math.div($layout-md, 4);
        width: calc(((100% - 2 * var(--h-grid-md)) - $gutter) / 4 );
    }

    a {
        background-image: url('/media/img/logos/firefox/logo-word-hor-white.svg');
        background-size: contain;
        display: block;
        width: 200px;
        height: 68px;
        margin: 0 auto;

        @media screen and (min-width: #{$screen-lg}) {
            text-align: start;
            margin: 0;
        }
    }
}

.c-footer-branding {
    margin-bottom: $spacing-xl;

    h2 {
        @include font-size(24px);
        padding-top: 0;
    }
}

/* ----------------------------------------------------------------------------- */
// Language switcher

.mzp-c-language-switcher {
    position: relative;

    &:has(.mzp-js-language-switcher-select:hover)::before,
    &:has(.mzp-js-language-switcher-select:focus)::before,
    &:has(.mzp-js-language-switcher-select:focus-within)::before {
        background: m24.$token-color-off-white url('/media/img/icons/m24-small/globe.svg') center center no-repeat;
        background-size: 18px 18px;
    }

    &::before {
        @include bidi(((left, 4px, auto), (right, auto, 4px)));
        background: transparent url('/media/img/icons/m24-small/globe-white.svg') center center no-repeat;
        background-size: 18px 18px;
        top: 50%;
        margin-top: -16px;
        content: "";
        display: block;
        height: 32px;
        width: 32px;
        position: absolute;
    }

    label {
        @include visually-hidden;
    }

    .mzp-c-language-switcher-link {
        color: m24.$token-color-off-white;
        position: absolute;
        top: -1.5em;

        .js & {
            @include visually-hidden;
        }

        &:focus,
        &:focus-visible {
            clip: auto;
            height: auto;
            overflow: visible;
            text-indent: 0;
            width: auto;
        }
    }

    .mzp-js-language-switcher-select {
        @include bidi(((background-position, right 8px center, 8px center),));
        background: m24.$token-color-off-black url('/media/img/icons/m24-small/down-caret-white.svg') no-repeat;
        background-size: 16px 16px;
        border-radius: 0;
        border: 2px solid m24.$token-color-off-white;
        color: m24.$token-color-off-white;
        font-weight: 600;
        font-size: remify(16px);
        padding-left: 36px; // space for globe icon
        max-width: 100%;
        width: 100%;
        margin: 0;

        @media #{$mq-lg} {
            width: fit-content;
        }

        &:hover,
        &:focus,
        &:focus-visible,
        &:focus-within {
            color: $color-black;
            background: m24.$token-color-off-white url('/media/img/icons/m24-small/down-caret.svg') no-repeat;
            @include bidi(((background-position, right 8px center, 8px center),));
            background-size: 16px 16px;
        }
    }
}

// No JS: remove globe icon
.no-js .mzp-c-language-switcher::before {
    content: none;
}

.no-js .mzp-js-language-switcher-select {
    padding-left: $spacing-sm;
}

